[Done] maghrib - isya

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.apache.poi:poi:3.17'
+   // implementation 'org.apache.poi:poi:3.17'
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml:5.2.3'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
