--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ dependencies {
    // implementation 'org.apache.poi:poi:3.17'
     implementation 'org.apache.poi:poi:5.2.3'
     implementation 'org.apache.poi:poi-ooxml:5.2.3'
+    implementation 'org.slf4j:slf4j-api:1.7.24'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 }
